2008-01-06  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Shlibs/Objdump.pm: Also retrieve dynamic relocation
	records from objdump by adding the -R option. Use this information
	to mark symbols affected by R_*_COPY relocations as undefined.
	They are initialized by the loader with values searched in the
	needed libraries.

	* scripts/Dpkg/BuildOptions.pm (set): Change the default value of
	the overwrite parameter to 1. The only use of this function in
	dpkg-buildpackage is missing the parameter and actually wants to
	overwrite the whole variable.
	* scripts/t/300_Dpkg_BuildOptions.t: Adjust the test suite for this
	change.

2008-01-04  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Shlibs/SymbolFile.pm: Replace #DEPRECATED by
	#MISSING in the output and recognize both while parsing. People
	understand better that way.

2008-01-03  Raphael Hertzog  <hertzog@debian.org>

	* scripts/dpkg-shlibdeps.pl (find_symbols_file): When libraries
	are found in non-packaged files, first try to find the
	corresponding symbols file in the build tree containing that
	library. On the opposite, don't look up symbols files in debian/*
	build directories for libraries found in installed packages (build
	trees are scanned first and thus if they contain a needed library
	dpkg-shlibdeps will find the library there and not in an installed
	package).
	* scripts/dpkg-shlibdeps.pl (my_find_library): When defining the
	list of package build trees to scan, also consider those that
	contain symbols files (instead of only considering those that have
	a shlibs file).
	* man/dpkg-shlibdeps.1: Document the change listed above.

	* scripts/dpkg-shlibdeps.pl: Add a new -S<pkgbuilddir> option to
	indicate a package build tree that should be scanned first when
	trying to find a library.
	* man/dpkg-shlibdeps.1: Document the new -S option.

	* scripts/dpkg-shlibdeps.pl (add_shlibs_dep): Use the same logic
	as find_symbols_files to find shlibs files. Check