@@ -45,6 +45,8 @@ dpkg (1.14.15) UNRELEASED; urgency=low
   * Add lzma to dpkg-dev Depends.
   * Do not automatically enable -j if DEB_BUILD_OPTIONS contains parallel=n,
     and allow overriding its value from the environment. Closes: #458589
+  * Fix Dpkg::BuildOptions to parse all options in DEB_BUILD_OPTIONS, so
+    that dpkg-buildpackage called with -j preserves unrecognized options.
 
   [ Updated dpkg translations ]
   * Norwegian Bokmål (Hans Fredrik Nordhaug). Closes: #457918, #458732
