@@ -1,3 +1,11 @@
+2008-01-07  Guillem Jover  <guillem@debian.org>
+
+	* scripts/Dpkg/BuildOptions.pm (set): Parse all options separated
+	by spaces or comma, do not lowercase the option names, do not match
+	on name substrings, and on recognized options with invalid values
+	discard the value or the entire option.
+	* scripts/t/300_Dpkg_BuildOptions.t: Adjust test suite.
+
 2008-01-06  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/Shlibs/Objdump.pm: Also retrieve dynamic relocation
